# wezel

./: Cargo.toml  Dockerfile.anthill  LICENSE-AGPL  README.md  VISION.md  dist-workspace.toml  docker-compose.db.yml  docker-compose.yml  justfile  schema.json
.github/workflows/: ci.yml  nightly.yml
.wezel/: config.toml  schema.json
.wezel/experiments/clean-build/: experiment.toml
.wezel/experiments/release-build/: experiment.toml
anthill/: package-lock.json  package.json  vite.config.ts
anthill/src/: App.tsx  Shell.tsx
anthill/src/components/: Badge.tsx  BenchmarkCreatorModal.tsx  BuildTimingsChart.tsx  DeltaBadge.tsx  DetailView.tsx  FilterBar.tsx  FreqBar.tsx  Graph.tsx  HeatLegend.tsx  PanelHandle.tsx  RunList.tsx  Stat.tsx  Summary.tsx
anthill/src/lib/: AuthContext.tsx  ProjectContext.tsx  api.ts  data.ts  format.ts  hooks.ts  projectCtx.ts  registry.ts  theme.ts  toolchain.ts  useDrag.ts  useKeyboardNav.ts  useProject.ts
anthill/src/routes/: CommitPage.tsx  CommitsListPage.tsx  LoginPage.tsx  MeasurementDetailPage.tsx  ObservationDetailPage.tsx  ObservationsPage.tsx  PheromoneAdminPage.tsx  ScenarioDetailPage.tsx  ScenariosPage.tsx
baselines/clean-build/: HEAD
bisection/active/: release-build.json
crates/burrow/: Cargo.toml
crates/burrow/data/: projects.json
crates/burrow/src/: auth.rs  db.rs  main.rs  models.rs
crates/forager_cli/: Cargo.toml
crates/forager_cli/src/: main.rs
crates/forager_exec/: Cargo.toml
crates/forager_exec/src/: main.rs
crates/forager_llvm_lines/: Cargo.toml
crates/forager_llvm_lines/src/: main.rs
crates/forager_sdk/: Cargo.toml
crates/forager_sdk/src/: lib.rs
crates/forager_sdk/tests/: smoke.rs
crates/pheromone_cargo/: Cargo.toml
crates/pheromone_cargo/src/: main.rs
crates/pheromone_cli/: Cargo.toml
crates/pheromone_cli/src/: flush.rs  main.rs  shell.rs
crates/pheromone_cli/src/cmd/: alias.rs  mod.rs
crates/pheromone_types/src/: lib.rs
crates/wezel_bench/: Cargo.toml
crates/wezel_bench/src/: daemon.rs  lib.rs  lint.rs  run.rs  standalone.rs  workspace.rs
crates/wezel_bench/tests/: bundle.rs  lint.rs  standalone.rs
crates/wezel_cli/: Cargo.toml  build.rs
crates/wezel_cli/src/: config.rs  daemon.rs  fetcher.rs  flush.rs  main.rs  pheromone_mgr.rs  queue.rs  shell.rs
crates/wezel_cli/src/cmd/: health.rs  init.rs  mod.rs  setup.rs  status.rs
crates/wezel_types/: Cargo.toml
crates/wezel_types/src/: lib.rs
e2e/hurl/: 02_projects.hurl
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Graph.tsx
frontend/src/mock_data/: scenarios.json
frontend/src/mock_data/graphs/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
frontend/src/mock_data/runs/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
frontend/src/routes/: ScenarioDetailPage.tsx  ScenariosPage.tsx
registry/adapters/: cargo.json
scripts/: build-pheromones.sh
