[workspace]
resolver = "3"
members = ["crates/wezel_cli", "crates/wezel_types", "crates/pheromone_cargo", "crates/burrow"]

[workspace.package]
repository = "https://github.com/wezel-dev/wezel"
publish = false
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
figment = { version = "0.10", features = ["toml"] }
wezel_types = { path = "crates/wezel_types" }
uuid = { version = "1", features = ["v4"] }
whoami = "1"
ureq = { version = "2", features = ["json"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
axum = "0.8"
dialoguer = "0.11"
libc = "0.2"
guppy = "0.17"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing-subscriber = "0.3"
which = "7"
url = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"