[workspace]
resolver = "3"
members = [
  "crates/wezel_cli",
  "crates/wezel_types",
  "crates/wezel_bench",
  "crates/forager_sdk",
]

[workspace.package]
repository = "https://github.com/wezel-build/wezel"
publish = false
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
wezel_types = { path = "crates/wezel_types" }
forager_sdk = { path = "crates/forager_sdk" }
uuid = { version = "1", features = ["v4", "serde"] }
whoami = "1"
ureq = { version = "2", features = ["json"] }
log = "0.4"
env_logger = "0.11"
dialoguer = "0.11"
libc = "0.2"
thiserror = "2"
which = "7"
flate2 = "1"
tar = "0.4"
xz2 = "0.1"
url = "2"
schemars = "0.8"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
indicatif = "0.17"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"