[package]
name = "burrow"
version = "0.1.0"
edition = "2024"
repository.workspace = true
publish.workspace = true
license = "AGPL-3.0-or-later"

[[bin]]
name = "burrow"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
axum-extra = { workspace = true }
uuid = { workspace = true }
wezel_types = { workspace = true }