[package]
name = "forager_cli"
version = "0.1.0"
edition = "2024"
repository.workspace = true
publish.workspace = true

[[bin]]
name = "forager"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
figment = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
uuid = { workspace = true }
wezel_types = { workspace = true }
which = { workspace = true }
whoami = { workspace = true }
