[package]
name = "forager_llvm_lines"
version = "0.1.0"
edition = "2024"
repository.workspace = true
publish.workspace = true

[[bin]]
name = "forager-llvm-lines"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wezel_types = { workspace = true }
