[package]
name = "forager_sdk"
version = "0.1.0-pre"
edition = "2024"
license = "Apache-2.0"
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wezel_types = { workspace = true }
