[package]
name = "pheromone_cargo"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository.workspace = true

[[bin]]
name = "pheromone-cargo"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
guppy = { workspace = true }
libc = { workspace = true }
wezel_types = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }