[package]
name = "pheromone_cli"
version = "0.1.0"
edition = "2024"
repository.workspace = true

[[bin]]
name = "wezel"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }

pheromone_types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
ureq = { version = "2", features = ["json"] }