[package]
name = "wezel_bench"
version = "0.1.0-pre"
edition = "2024"
publish.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
xz2 = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
indexmap = { workspace = true }
ureq = { workspace = true }
uuid = { workspace = true }
wezel_types = { workspace = true }
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
schemars = { workspace = true }
jsonschema = { workspace = true }
tempfile = { workspace = true }
