[package]
name = "wezel_cli"
version = "0.1.0-pre"
edition = "2024"
license = "Apache-2.0"
repository.workspace = true
publish.workspace = true

[[bin]]
name = "wezel"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dirs = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
wezel_types = { workspace = true }
uuid = { workspace = true }
whoami = { workspace = true }
dialoguer = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
url = { workspace = true }
figment = { version = "0.10", features = ["toml"] }
flate2 = { workspace = true }
tar = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
wezel_bench = { path = "../wezel_bench" }
indicatif = { workspace = true }